WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64537
REGRESSION (
r90809
): Setting a checkbox's checked property, doesn't render as checked until app window loses focus
https://bugs.webkit.org/show_bug.cgi?id=64537
Summary
REGRESSION (r90809): Setting a checkbox's checked property, doesn't render as...
Joel
Reported
2011-07-14 10:08:00 PDT
Created
attachment 100822
[details]
Click a row, to see the issue When you set a checkbox's checked property, webkit nightly isn't rendering a checked view of the icon until you remove focus from the entire application window. It is actually checked though, so it's just a visual bug. Works everywhere else, chrome, firefox, safari
Attachments
Click a row, to see the issue
(1.81 KB, text/html)
2011-07-14 10:08 PDT
,
Joel
no flags
Details
Patch
(4.20 KB, patch)
2011-07-14 19:18 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Patch 2
(4.19 KB, patch)
2011-07-14 19:30 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-07-14 15:23:52 PDT
<
rdar://problem/9778592
>
Kent Tamura
Comment 2
2011-07-14 19:18:41 PDT
Created
attachment 100915
[details]
Patch
Dominic Cooney
Comment 3
2011-07-14 19:26:51 PDT
Comment on
attachment 100915
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=100915&action=review
> LayoutTests/ChangeLog:3 > + REGRESSION (
r90809
): Setting a checkbox's checked property, doesn't render as checked until app window looses focus
loses
> Source/WebCore/ChangeLog:3 > + REGRESSION (
r90809
): Setting a checkbox's checked property, doesn't render as checked until app window looses focus
loses
Kent Tamura
Comment 4
2011-07-14 19:30:45 PDT
Created
attachment 100916
[details]
Patch 2 Fix typo
Darin Adler
Comment 5
2011-07-14 20:25:33 PDT
Comment on
attachment 100916
[details]
Patch 2 I don’t understand why it is correct to only call updateCheckedRadioButtons for radio buttons. The work in there does not seem to be radio-button-specific despite the function’s name. If that is correct, then the function should be moved into RadioInputType out of HTMLInputElement.
Kent Tamura
Comment 6
2011-07-14 20:38:35 PDT
Thank you for reviewing. (In reply to
comment #5
)
> (From update of
attachment 100916
[details]
) > I don’t understand why it is correct to only call updateCheckedRadioButtons for radio buttons. The work in there does not seem to be radio-button-specific despite the function’s name. If that is correct, then the function should be moved into RadioInputType out of HTMLInputElement.
I think updateCheckedRadioButton() is really specific to radio buttons, and we should move it to RadioInputType.
WebKit Review Bot
Comment 7
2011-07-14 21:31:42 PDT
Comment on
attachment 100916
[details]
Patch 2 Clearing flags on attachment: 100916 Committed
r91047
: <
http://trac.webkit.org/changeset/91047
>
WebKit Review Bot
Comment 8
2011-07-14 21:31:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug