REGRESSION (r90809): Setting a checkbox's checked property, doesn't render as checked until app window loses focus https://bugs.webkit.org/show_bug.cgi?id=64537

Reviewed by Darin Adler.

Source/WebCore:

We stopped to call updateCheckedRadioButtons() for checkboxes
since r90809, but we need to call RenderTheme::stateChanged(),
which was in updateCheckedRadioButtons(), for checkboxes.

Tests: fast/forms/checkbox-appearance-change-by-checked-expected.html
       fast/forms/checkbox-appearance-change-by-checked.html

* html/HTMLInputElement.cpp: Move the RenderTheme::stateChanged() call
from updateCheckedRadioButtons() to setChecked().
(WebCore::HTMLInputElement::updateCheckedRadioButtons):
(WebCore::HTMLInputElement::setChecked):

LayoutTests:

* fast/forms/checkbox-appearance-change-by-checked-expected.html: Added.
* fast/forms/checkbox-appearance-change-by-checked.html: Added.


Canonical link: https://commits.webkit.org/80304@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91047 268f45cc-cd09-0410-ab3c-d52691b4dbfc